examplesdir        = $(pkgdatadir)/Examples

nobase_dist_examples_DATA         =	\
		FixedOrder_NLO/NTuples/Run.B-like.dat \
		FixedOrder_NLO/NTuples/Reweight.B-like.dat \
		FixedOrder_NLO/NTuples/Run.R-like.dat \
		FixedOrder_NLO/NTuples/Reweight.R-like.dat \
		Jets_at_LeptonColliders/LEP_Jets_MCatNLO/Run.dat \
		Jets_at_LeptonColliders/LEP_Jets_MEPS/Run.dat \
		Jets_at_LeptonColliders/LEP_Jets_MENLOPS/Run.dat \
		Jets_at_LeptonColliders/LEP_Jets_MEPSatNLO/Run.dat \
		V_plus_Jets/LHC_W1jet_MCatNLO/Run.dat \
		V_plus_Jets/LHC_WJets/Run.dat \
		V_plus_Jets/LHC_WJets/Run.NLO.dat \
		V_plus_Jets/LHC_WJets/My_JetCriterion.C \
		V_plus_Jets/LHC_WJets/SConstruct \
		V_plus_Jets/LHC_Z1jet_MCatNLO_LHOLE/Run.dat \
		V_plus_Jets/LHC_ZJets/Run.dat \
		V_plus_Jets/LHC_ZJets/Run.NLO.dat \
		V_plus_Bs/LHC_Wbb/Wbb_Virtual.f \
		V_plus_Bs/LHC_Wbb/Wbb_Interface.C \
		V_plus_Bs/LHC_Wbb/SConstruct \
		V_plus_Bs/LHC_Wbb/Run.dat \
		V_plus_Bs/LHC_Wbb/Analysis.dat \
		Jets_at_HadronColliders/LHC_Jets_MCatNLO/Run.dat \
		Jets_at_HadronColliders/LHC_Jets_MEPS/Run.dat \
		Gamma_plus_Jets/Tevatron_SinglePhotons_MEPS/Run.single.me.dat \
		Gamma_plus_Jets/Tevatron_SinglePhotons_MEPS/Run.single.ps.dat \
		GammaGamma_plus_Jets/Tevatron_Diphotons_MEPS/Run.diphoton.me.dat \
		GammaGamma_plus_Jets/Tevatron_Diphotons_MEPS/Run.diphoton.ps.dat \
		H_in_GluonFusion/LHC_HJets_Inclusive/Run.dat \
		Tops_plus_Jets/Tevatron_Tops_MEPS/Run.dat \
		Tops_plus_Jets/LHC_Tops_MEPS/Run.dat \
		Tops_plus_Jets/Tevatron_Tops_MCatNLO/Run.dat \
		Tops_plus_Jets/LHC_Tops_MCatNLO/Run.dat \
		Tops_plus_V/LHC_TTW/Run.dat

