examplesdir        = $(pkgdatadir)/Examples

nobase_dist_examples_DATA         =	\
		API/ME2-Python/Sherpa.yaml \
		API/ME2-Python/test.py.in \
		API/ME2-CPP/Sherpa.yaml \
		API/ME2-CPP/test.cpp \
		API/ME2-CPP/Makefile \
		API/Events/Sherpa.yaml \
		API/Events/test.py.in \
		API/MPIEvents/Sherpa.yaml \
		API/MPIEvents/test.py.in \
                BFactory/BDecay/Sherpa.yaml \
                BFactory/Belle_QCDBackground/Sherpa.yaml \
                BFactory/Belle_Signal/Sherpa.yaml \
		Models/SM_ZPrime/Model.C \
		Models/SM_ZPrime/Run.dat \
		Models/SM_ZPrime/Makefile \
		FixedOrder_NLO/NTuples/Sherpa.B-like.yaml \
		FixedOrder_NLO/NTuples/Sherpa.Reweight.B-like.yaml \
		FixedOrder_NLO/NTuples/Sherpa.R-like.yaml \
		FixedOrder_NLO/NTuples/Sherpa.Reweight.R-like.yaml \
		FixedOrder_NLO/MINLO/Sherpa.yaml \
		Jets_at_HadronColliders/LHC_Jets_MCatNLO/Sherpa.yaml \
		V_plus_Jets/LHC_WJets/Sherpa.yaml \
		V_plus_Jets/LHC_WJets/My_JetCriterion.C \
		V_plus_Jets/LHC_WJets/SConstruct \
		V_plus_Jets/LHC_ZJets/Sherpa.yaml \
		V_plus_Bs/LHC_Wbb/Wbb_Virtual.f \
		V_plus_Bs/LHC_Wbb/Wbb_Interface.C \
		V_plus_Bs/LHC_Wbb/SConstruct \
		V_plus_Bs/LHC_Wbb/Sherpa.yaml \
		V_plus_Bs/LHC_Zbb/Sherpa.yaml \
		VV_plus_Jets/LHC_2l2nuJets/Sherpa.yaml \
		VV_plus_Jets/LHC_2l2nuJets_GluonInitiated/Sherpa.yaml \
		VV_plus_Jets/LHC_4lJets/Sherpa.yaml \
		VV_plus_Jets/LHC_4lJets_GluonInitiated/Sherpa.yaml \
		VV_plus_Jets/LHC_WqqZnunuJets/Sherpa.yaml \
		VV_plus_Jets/LHC_2l2nu2jJets_SameSign/Sherpa.yaml \
		Jets_at_HadronColliders/LHC_Jets_MEPS/Sherpa.yaml \
		Jets_at_LeptonColliders/LEP_Jets/Sherpa.yaml \
		Jets_at_LeptonColliders/LEP_Jets/Sherpa.NLO.yaml \
		Jets_in_DIS/HERA/Sherpa.yaml \
		H_in_AssociatedProduction/LHC_WHJets/Sherpa.yaml \
                H_in_AssociatedProduction/LHC_ZHJets/Sherpa.yaml \
                H_in_AssociatedProduction/LHC_Hll_MCatNLO/Sherpa.yaml \
		H_in_GluonFusion/LHC_HInterference/Sherpa.yaml \
		H_in_GluonFusion/LHC_HJets/Sherpa.yaml \
		H_in_GluonFusion/LHC_HJets_Finite_MTop/Sherpa.yaml \
		H_in_TTBar/LHC_TTH_MCatNLO/Sherpa.yaml \
		Soft_QCD/Run.Xsecs.dat \
		Soft_QCD/LHC_MinBias/Run.7TeV.dat \
		Tops_plus_Jets/LHC_Tops/Sherpa.yaml \
		Tops_plus_Jets/LHC_Tops/Sherpa.EWapprox.yaml \
		Tops_plus_V/LHC_TTW/Sherpa.yaml \
		UFO_MSSM/MSSM/__init__.py \
		UFO_MSSM/MSSM/build_restrict.py \
		UFO_MSSM/MSSM/coupling_orders.py \
		UFO_MSSM/MSSM/couplings.py \
		UFO_MSSM/MSSM/function_library.py \
		UFO_MSSM/MSSM/lorentz.py \
		UFO_MSSM/MSSM/object_library.py \
		UFO_MSSM/MSSM/parameters.py \
		UFO_MSSM/MSSM/particles.py \
		UFO_MSSM/MSSM/vertices.py \
		UFO_MSSM/MSSM/write_param_card.py \
		SingleTop_Channels/Sherpa.tj-t_channel.yaml \
		SingleTop_Channels/Sherpa.tj-t_channel-nf4.yaml \
		SingleTop_Channels/Sherpa.tj-s_channel.yaml \
		SingleTop_Channels/Sherpa.tW.yaml
