examplesdir        = $(pkgdatadir)/Examples

# install, but don't distribute
nobase_nodist_examples_DATA       =	\
		API/ME2-Python/test.py \
		API/Events/test.py \
		API/MPIEvents/test.py

# distribute, but don't install
EXTRA_DIST                        =>	\
		API/ME2-Python/test.py.in \
		API/Events/test.py.in \
		API/MPIEvents/test.py.in

# distribute and install
nobase_dist_examples_DATA         =	\
		API/ME2-Python/Sherpa.yaml \
		API/ME2-CPP/Sherpa.yaml \
		API/ME2-CPP/test.cpp \
		API/ME2-CPP/Makefile \
		API/Events/Sherpa.yaml \
		API/MPIEvents/Sherpa.yaml \
		BFactory/BDecay/Sherpa.yaml \
		BFactory/Belle_QCDBackground/Sherpa.yaml \
		BFactory/Belle_Signal/Sherpa.yaml \
		Models/SM_ZPrime/Model.C \
		Models/SM_ZPrime/Run.dat \
		Models/SM_ZPrime/Makefile \
		Models/SM_ggV/Sherpa.h.yaml \
		Models/SM_ggV/Sherpa.WW.yaml \
		Models/SM_ggV/Sherpa.ZZ.yaml \
		FixedOrder_NLO/NLO_QCD_nunuqq/Sherpa.RS.QCD.yaml \
		FixedOrder_NLO/NLO_QCD_nunuqq/Sherpa.BVI.QCD.yaml \
		FixedOrder_NLO/NLO_QCD_ppnunu/Sherpa.RS.QCD.yaml \
		FixedOrder_NLO/NLO_QCD_ppnunu/Sherpa.LO.yaml \
		FixedOrder_NLO/NLO_QCD_ppnunu/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_QCD_ppnunu/Sherpa.BI.QCD.yaml \
		FixedOrder_NLO/NLO_QCD_ppnunu/Sherpa.I.QCD.yaml \
		FixedOrder_NLO/NLO_EW_ppjj/Sherpa.LO.yaml \
		FixedOrder_NLO/NLO_EW_ppjj/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NTuples/Sherpa.R-like.yaml \
		FixedOrder_NLO/NTuples/Sherpa.Reweight.R-like.yaml \
		FixedOrder_NLO/NTuples/Sherpa.B-like.yaml \
		FixedOrder_NLO/NTuples/Sherpa.Reweight.B-like.yaml \
		FixedOrder_NLO/NLO_EW_ppWj/Sherpa.LO.yaml \
		FixedOrder_NLO/NLO_EW_ppWj/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_QCD_pph/Sherpa.I.yaml \
		FixedOrder_NLO/NLO_QCD_pph/Sherpa.BRS.yaml \
		FixedOrder_NLO/NLO_QCD_pph/Sherpa.BVI.yaml \
		FixedOrder_NLO/NLO_QCD_pph/Sherpa.BVIRS.yaml \
		FixedOrder_NLO/NLO_QCD_pph/Sherpa.LO.yaml \
		FixedOrder_NLO/NLO_QCD_pph/Sherpa.V.yaml \
		FixedOrder_NLO/NLO_QCD_pph/Sherpa.BV.yaml \
		FixedOrder_NLO/NLO_QCD_pph/Sherpa.RS.yaml \
		FixedOrder_NLO/NLO_QCD_pph/Sherpa.B.yaml \
		FixedOrder_NLO/NLO_EW_ppWjj/Sherpa.LO.yaml \
		FixedOrder_NLO/NLO_EW_ppWjj/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_QCD_ppQQ/Sherpa.BI.QCD.yaml \
		FixedOrder_NLO/NLO_EW_ppWW/Sherpa.LO.yaml \
		FixedOrder_NLO/NLO_EW_ppWW/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/MINLO/Sherpa.yaml \
		FixedOrder_NLO/NLO_EW_ppee/Sherpa.RS.QCD.yaml \
		FixedOrder_NLO/NLO_EW_ppee/Sherpa.BVI.EW.yaml \
		FixedOrder_NLO/NLO_EW_ppee/Sherpa.RS.PPeeP.yaml \
		FixedOrder_NLO/NLO_EW_ppee/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_EW_ppQQ/Sherpa.BI.QCD.yaml \
		FixedOrder_NLO/NLO_EW_ppWZ/Sherpa.LO.yaml \
		FixedOrder_NLO/NLO_EW_ppWZ/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_EW_nunuee/Sherpa.BVI.EW.yaml \
		FixedOrder_NLO/NLO_EW_nunuee/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_EW_nunuee/Sherpa.EW.yaml \
		FixedOrder_NLO/NLO_EW_ppenu/Sherpa.LO.yaml \
		FixedOrder_NLO/NLO_EW_ppenu/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_EW_nunuWW/Sherpa.BVI.EW.yaml \
		FixedOrder_NLO/NLO_EW_nunuWW/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_EW_nunuWW/Sherpa.EW.yaml \
		FixedOrder_NLO/NLO_QCD_ppenu/Sherpa.VI.QCD.yaml \
		FixedOrder_NLO/NLO_QCD_ppee/Sherpa.RS.QCD.yaml \
		FixedOrder_NLO/NLO_EW_ppenumunu/Sherpa.LO.yaml \
		FixedOrder_NLO/NLO_EW_ppenumunu/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_EW_ppW/Sherpa.LO.yaml \
		FixedOrder_NLO/NLO_EW_ppW/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_EW_nunuQQ/Sherpa.BVI.EW.yaml \
		FixedOrder_NLO/NLO_EW_nunuQQ/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_EW_nunuQQ/Sherpa.EW.yaml \
		FixedOrder_NLO/NLO_EW_pptth/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_EW_pptth/Sherpa.B.yaml \
		FixedOrder_NLO/NLO_EW_ppeej/Sherpa.KP.EW.yaml \
		FixedOrder_NLO/NLO_EW_ppeej/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_EW_ppeej/Sherpa.VI.EW.yaml \
		FixedOrder_NLO/NLO_EW_ppeej/Sherpa.KP.QCD.yaml \
		FixedOrder_NLO/NLO_EW_ppeej/Sherpa.VI.QCD.yaml \
		FixedOrder_NLO/NLO_EW_ppeej/Sherpa.B.yaml \
		FixedOrder_NLO/NLO_EW_ppnunu/Sherpa.BVI.EW.yaml \
		FixedOrder_NLO/NLO_EW_ppnunu/Sherpa.RS.EW.yaml \
		FixedOrder_NLO/NLO_EW_ppnunu/Sherpa.EW.yaml \
		FixedOrder_NNLO/LHC_HJets/Sherpa.yaml \
		FixedOrder_NNLO/LHC_WJets/Sherpa.yaml \
		FixedOrder_NNLO/LHC_ZJets/Sherpa.yaml \
		Jets_at_HadronColliders/LHC_Jets_MCatNLO/Sherpa.yaml \
		HPC/WJets/Sherpa.yaml \
		HPC/WJets_Async/Sherpa.yaml \
		V_plus_Jets/LHC_WJets/Sherpa.yaml \
		V_plus_Jets/LHC_WJets/My_JetCriterion.C \
		V_plus_Jets/LHC_WJets/SConstruct \
		V_plus_Jets/LHC_ZJets/Sherpa.yaml \
		V_plus_Bs/LHC_Wbb/Wbb_Virtual.f \
		V_plus_Bs/LHC_Wbb/Wbb_Interface.C \
		V_plus_Bs/LHC_Wbb/SConstruct \
		V_plus_Bs/LHC_Wbb/Sherpa.yaml \
		V_plus_Bs/LHC_Zbb/Sherpa.yaml \
		VV_plus_Jets/LHC_WqqZnunuJets/Sherpa.yaml  \
		VV_plus_Jets/LHC_2l2nu2jJets_SameSign/Sherpa.yaml  \
		VV_plus_Jets/LHC_2l2nuJets/Sherpa.yaml  \
		VV_plus_Jets/LHC_4lJets_GluonInitiated/Sherpa.yaml  \
		VV_plus_Jets/LHC_4lJets_GluonInitiated/Sherpa.tree.yaml  \
		VV_plus_Jets/LHC_4lJets/Sherpa.yaml  \
		VV_plus_Jets/LHC_2l2nuJets_GluonInitiated/Sherpa.yaml \
		VV_plus_Jets/LHC_2l2nuJets_GluonInitiated/Sherpa.tree.yaml \
		V_plus_Jets/LHC_WJets_UN2LOPS/Sherpa.yaml \
		V_plus_Jets/LHC_ZJets_UN2LOPS/Sherpa.yaml \
		Jets_at_HadronColliders/LHC_Jets_MEPS/Sherpa.yaml \
		Jets_at_LeptonColliders/PETRA_Jets/Sherpa.44.yaml \
		Jets_at_LeptonColliders/PETRA_Jets/Sherpa.yaml \
		Jets_at_LeptonColliders/PETRA_Jets/Sherpa.35.yaml \
		Jets_at_LeptonColliders/PETRA_Jets/Sherpa.14.yaml \
		Jets_at_LeptonColliders/LEP_Jets/Sherpa.yaml \
		Jets_at_LeptonColliders/LEP_Jets/Sherpa.206.yaml \
		Jets_at_LeptonColliders/LEP_Jets/Sherpa.GammaPDF.yaml \
		Jets_at_LeptonColliders/LEP_Jets/Sherpa.197.yaml \
		Jets_at_LeptonColliders/LEP_Jets/Sherpa.PDF.yaml \
		Jets_at_LeptonColliders/LEP_Jets/Sherpa.Reconnect.yaml \
		Jets_at_LeptonColliders/LEP_Jets/Sherpa.EPA.yaml \
		Jets_at_LeptonColliders/LEP_Jets/Sherpa.test.yaml \
		Jets_at_LeptonColliders/LEP_Jets/Sherpa.EPA_PDF.yaml \
		Jets_at_LeptonColliders/LEP_Jets/Sherpa.NLO.yaml \
		Jets_in_DIS/HERA/Sherpa.yaml \
		H_in_AssociatedProduction/LHC_Hll_MCatNLO/Sherpa.yaml \
		H_in_AssociatedProduction/LHC_WHJets/Sherpa.yaml \
		H_in_AssociatedProduction/LHC_ZHJets/Sherpa.yaml \
		H_in_GluonFusion/LHC_HInterference/Sherpa.yaml \
		H_in_GluonFusion/LHC_HInt_MCatNLO/Sherpa.yaml \
		H_in_GluonFusion/LHC_HJets_Finite_MTop/Sherpa.yaml \
		H_in_GluonFusion/LHC_HJets/Sherpa.yaml \
		H_in_GluonFusion/LHC_HJets_UN2LOPS/Sherpa.yaml \
		H_in_TTBar/LHC_TTH_MCatNLO/Sherpa.yaml \
		Instanton/LHC_13/Instanton_shatoverN_wMPI.yaml \
		Instanton/LHC_13/Instanton_InvRho_wMPI.yaml \
		Instanton/LHC_13/Instanton.yaml \
		Instanton/LHC_13/mc.Sh_Inst_m300_nf5.yaml \
		Instanton/LHC_13/Instanton_Original.yaml \
		Instanton/LHC_13/Instanton_InvRho_noMPI.yaml \
		Soft_QCD/LHC_7TeV_MinBias/Amisic.yaml \
		Soft_QCD/LHC_7TeV_MinBias/SoftDiffractive.yaml \
		Soft_QCD/LHC_7TeV_MinBias/Elastic.yaml \
		Soft_QCD/LHC_7TeV_MinBias/Shrimps.yaml \
		Tops_plus_Jets/LHC_Tops/Sherpa.EWapprox.yaml \
		Tops_plus_Jets/LHC_Tops/Sherpa.Reconnect.yaml \
		Tops_plus_Jets/LHC_Tops/Sherpa.yaml \
		Tops_plus_V/LHC_TTW/Sherpa.yaml \
		UFO_MSSM/MSSM/__init__.py \
		UFO_MSSM/MSSM/build_restrict.py \
		UFO_MSSM/MSSM/coupling_orders.py \
		UFO_MSSM/MSSM/couplings.py \
		UFO_MSSM/MSSM/function_library.py \
		UFO_MSSM/MSSM/lorentz.py \
		UFO_MSSM/MSSM/object_library.py \
		UFO_MSSM/MSSM/parameters.py \
		UFO_MSSM/MSSM/particles.py \
		UFO_MSSM/MSSM/vertices.py \
		UFO_MSSM/MSSM/write_param_card.py \
		Userhook/Sherpa.yaml \
		VBF_Interference/Loop2/Sherpa.yaml \
		RelicDensity/LEP_ee_mumu.yaml \
		RelicDensity/Sherpa.yaml \
		RemnantTests/SimpleHera/Sherpa.yaml \
		RemnantTests/SimpleLEP/Sherpa.EPA.yaml \
		RemnantTests/SimpleLEP/Sherpa.ISR.yaml \
		RemnantTests/SimpleLEP/Sherpa.yaml \
		RemnantTests/SimpleLHC/Sherpa.MPI.yaml \
		RemnantTests/SimpleLHC/Sherpa.yaml \
		SingleTop_Channels/Sherpa.tj-t_channel.yaml \
		SingleTop_Channels/Sherpa.tj-t_channel-nf4.yaml \
		SingleTop_Channels/Sherpa.tj-s_channel-nf4.yaml \
		SingleTop_Channels/Sherpa.tj-s_channel.yaml \
		SingleTop_Channels/Sherpa.tW.yaml
