dnl Process this file with autoconf to produce a configure script.
AC_INIT
AM_INIT_AUTOMAKE(PDF, 1.0)
AM_DISABLE_STATIC
AC_PREFIX_DEFAULT(${PWD}/..)
dnl AC_TOP_SRCDIR_DEFAULT(${PWD}/..)
dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CXX
AC_PROG_CC
AM_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir)


AC_OUTPUT(		Main/Makefile \
			Include/Makefile \
			Makefile )

